# rs-soroban-env

./: Cargo.toml  deny.toml
.github/: CODEOWNERS
.github/workflows/: rust.yml
soroban-bench-utils/: Cargo.toml
soroban-builtin-sdk-macros/: Cargo.toml
soroban-env-common/: Cargo.toml  env.json
soroban-env-common/src/: convert.rs  error.rs  lib.rs  meta.rs  symbol.rs
soroban-env-guest/: Cargo.toml
soroban-env-host/: Cargo.toml
soroban-env-host/src/: auth.rs  builtin_contracts.rs  fees.rs  host.rs  host_object.rs  storage.rs  test.rs  vm.rs
soroban-env-host/src/builtin_contracts/: account_contract.rs  common_types.rs  hcnet_asset_contract.rs  invoker_contract_auth.rs
soroban-env-host/src/builtin_contracts/hcnet_asset_contract/: allowance.rs  asset_info.rs  balance.rs  contract.rs  metadata.rs  storage_types.rs  test_hcnet_asset_contract.rs
soroban-env-host/src/events/: mod.rs
soroban-env-host/src/host/: comparison.rs  crypto.rs  data_helper.rs  error.rs  frame.rs  lifecycle.rs  prng.rs
soroban-env-host/src/test/: address.rs  depth_limit.rs  map.rs  observe.rs  stellar_asset_contract.rs  vec.rs
soroban-env-macros/: Cargo.toml
soroban-env-macros/src/: lib.rs
soroban-synth-wasm/: Cargo.toml
soroban-test-wasms/: README.md
soroban-test-wasms/src/: lib.rs
soroban-test-wasms/wasm-workspace/: Cargo.toml  README.md
soroban-test-wasms/wasm-workspace/add_f32/: Cargo.toml
soroban-test-wasms/wasm-workspace/add_i32/: Cargo.toml
soroban-test-wasms/wasm-workspace/alloc/: Cargo.toml
soroban-test-wasms/wasm-workspace/auth/: Cargo.toml
soroban-test-wasms/wasm-workspace/complex/: Cargo.toml
soroban-test-wasms/wasm-workspace/conditional_account/: Cargo.toml
soroban-test-wasms/wasm-workspace/contract_data/: Cargo.toml
soroban-test-wasms/wasm-workspace/create_contract/: Cargo.toml
soroban-test-wasms/wasm-workspace/delegated_account/: Cargo.toml
soroban-test-wasms/wasm-workspace/err/: Cargo.toml
soroban-test-wasms/wasm-workspace/fannkuch/: Cargo.toml
soroban-test-wasms/wasm-workspace/fib/: Cargo.toml
soroban-test-wasms/wasm-workspace/hostile/: Cargo.toml
soroban-test-wasms/wasm-workspace/hostile_large_val/: Cargo.toml
soroban-test-wasms/wasm-workspace/invoke_contract/: Cargo.toml
soroban-test-wasms/wasm-workspace/linear_memory/: Cargo.toml
soroban-test-wasms/wasm-workspace/loadgen/: Cargo.toml
soroban-test-wasms/wasm-workspace/recursive_account/: Cargo.toml
soroban-test-wasms/wasm-workspace/sac_reentry_account/: Cargo.toml
soroban-test-wasms/wasm-workspace/simple_account/: Cargo.toml
soroban-test-wasms/wasm-workspace/update/: Cargo.toml
soroban-test-wasms/wasm-workspace/vec/: Cargo.toml
soroban-test-wasms/wasm-workspace/write_upgrade_bytes/: Cargo.toml
soroban-test-wasms/wasm-workspace/write_upgrade_bytes/src/: lib.rs
