[package]
name = "soroban-bench-utils"
description = "Utilities for benchmarking soroban."
homepage = "https://github.com/shantanu-hashcash/rs-soroban-env"
repository = "https://github.com/shantanu-hashcash/rs-soroban-env"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.74"
publish = false

[dependencies]
soroban-env-common = { workspace = true }
tracking-allocator = "=0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4.7"
