[package]
name = "soroban-env-macros"
description = "Soroban contract environment macros."
homepage = "https://github.com/shantanu-hashcash/rs-soroban-env"
repository = "https://github.com/shantanu-hashcash/rs-soroban-env"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.74"

[lib]
proc-macro = true

[dependencies]
hcnet-xdr = { workspace = true, features = ["curr", "std"] }
syn = {version="=2.0.39",features=["full"]}
quote = "=1.0.33"
proc-macro2 = "=1.0.69"
itertools = "=0.11.0"
serde = { version = "=1.0.192", features = ["derive"] }
serde_json = "=1.0.108"

[features]
next = ["hcnet-xdr/next"]

[package.metadata.docs.rs]
all-features = true
